Improve readability. Fix images.

--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -43,7 +43,8 @@
       &.horizontal {
         img {
           height: auto;
-          width: 100%;
+          max-height: 100%;
+          max-width: 100%;
         }
       }
     }
@@ -65,7 +66,7 @@
       .name-wrapper {
         grid-row: 2;
         grid-column: 1 / 3;
-        font-size: 0.9rem;
+        font-size: 0.8rem;
       }
       .price-wrapper {
         display: flex;
@@ -73,7 +74,7 @@
         align-items: center;
         grid-row: 1;
         grid-column: 2;
-        font-size: 0.9rem;
+        font-size: 0.8rem;
       }
     }
   }
